--- a/template-2/index.html
+++ b/template-2/index.html
@@ -53,27 +53,97 @@
 		<hr>
 		<section id="b2">
 			<h1>Our Platform Offers you many features</h1>
-			<div>
+			<div class="container-fluid">
 				<ul>
-					<li id="l1">Search your best fit Universities</li>
-					<li id="l2">Evaluate your profile for admit chances</li>
-					<li id="l3">Build your profile with our suggestions</li>
-					<li id="l4">Prepare all the required documents</li>
-					<li id="l5">Get daily updates for important university news</li>
-					<li id="l6">Submit your application on time</li>
-					<li id="l7">Receive admits and choose your final university</li>
-					<li id="l8">Get to know your total expense abroad</li>
-					<li id="l9">Get help with visa councelling</li>
-					<li id="l10">Book your room with our help</li>
-					<li id="l11">Buy the necessary items to carry</li>
-					<li id="l12">Book your tickets and fly abroad</li>
-					<li id="l13">Manage all of this using our dashboard</li>
-					<li id="l14">All for free</li>
+					<li id="l1" tabindex="1">
+						<h3>Search your best fit Universities</h3></li>
+					<li id="l2" tabindex="2">
+						<h3>Evaluate your profile for admit chances</h3></li>
+					<li id="l3" tabindex="3">
+						<h3>Build your profile with our suggestions</h3></li>
+					<li id="l4" tabindex="4">
+						<h3>Prepare all the required documents</h3></li>
+					<li id="l5" tabindex="5">
+						<h3>Get daily updates for important university news</h3></li>
+					<li id="l6" tabindex="6">
+						<h3>Submit your application on time</h3></li>
+					<li id="l7" tabindex="7">
+						<h3>Receive admits and choose your final university</h3></li>
+					<li id="l8" tabindex="8">
+						<h3>Get to know your total expense abroad</h3></li>
+					<li id="l9" tabindex="9">
+						<h3>Get help with visa councelling</h3></li>
+					<li id="l10" tabindex="10">
+						<h3>Book your room with our help</h3></li>
+					<li id="l11" tabindex="11">
+						<h3>Buy the necessary items to carry</h3></li>
+					<li id="l12" tabindex="12">
+						<h3>Book your tickets and fly abroad</h3></li>
+					<li id="l13" tabindex="13">
+						<h3>Manage all of this using our dashboard</h3></li>
+					<li id="l14" tabindex="14">
+						<h3>All for free</h3></li>
 				</ul>
-				<div>
-					
-				</div>
+				<div class="image"> <img src="https://in.udacity.com/assets/images/shared/features/thumb-get-hired-fg.jpg" alt=""> </div>
 			</div>
+		</section>
+		<hr>
+		<section id="b3">
+			<h1>Use our WEBSITE or download our <i>APP</i></h1>
+			<h2>(give both ios and android symbol to show which one to download)</h2>
+			<button class="btn">Download</button>
+			<div><img src="https://in.udacity.com/assets/images/shared/features/thumb-get-hired-fg.jpg" alt=""></div>
+		</section>
+		<hr>
+		<section id="b4" class="container-fluid">
+			<h1>See what our Customers have to say</h1>
+			<ul class="reviews">
+				<li class="review">
+					<h4>
+						<div class="start">"</div>When I want a professional Finessy website with more options for customistion, I always choose courses from Bamboo. Their support is unrivaled.
+					</h4>
+						<div><img src="" alt=""></div>
+						<div>
+							<h6>Junaid</h6>
+							<h5>MS in CSE, Stanford</h5>
+							<div>
+								<ul>
+									<li></li>
+								</ul>
+							</div>
+						</div>
+				</li>
+				<li class="review">
+					<h4>
+						<div class="start">"</div>When I want a professional Finessy website with more options for customistion, I always choose courses from Bamboo. Their support is unrivaled.
+					</h4>
+						<div><img src="" alt=""></div>
+						<div>
+							<h6>Junaid</h6>
+							<h5>MS in CSE, Stanford</h5>
+							<div>
+								<ul>
+									<li></li>
+								</ul>
+							</div>
+						</div>
+				</li>
+				<li class="review">
+					<h4>
+						<div class="start">"</div>When I want a professional Finessy website with more options for customistion, I always choose courses from Bamboo. Their support is unrivaled.
+					</h4>
+						<div><img src="" alt=""></div>
+						<div>
+							<h6>Junaid</h6>
+							<h5>MS in CSE, Stanford</h5>
+							<div>
+								<ul>
+									<li></li>
+								</ul>
+							</div>
+						</div>
+				</li>
+			</ul>
 		</section>
 	</div>
 </body>
