--- a/template-3/index.html
+++ b/template-3/index.html
@@ -134,9 +134,9 @@
 <!--			<div><img src="https://in.udacity.com/assets/images/shared/features/thumb-get-hired-fg.jpg" alt=""></div>-->
 	</div>
 		</section>
-		<section id="b4" class="container">
+		<section id="b4" class="container-fluid">
 			<h1>See what our <strong>Customers</strong> have to say</h1>
-			<ul class="reviews conatiner row">
+			<ul class="reviews conatiner-fluid row">
 				<li class="review col-md-3">
 					<h4>
 						<div class="start">"</div>When I want a professional Finessy website with more options for customistion, I always choose courses from Bamboo. Their support is unrivaled.
